--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,19 +8,52 @@
 </nav> -->
 
 <mat-toolbar color="primary" *ngIf="user && user.token">
-    <span class="spacer" *ngIf="isUser">Benvenuto utente {{user.username}}</span>
-    <span class="spacer" *ngIf="isAdmin">Benvenuto admin {{user.username}}</span>
-    <button mat-icon-button>
-    <mat-icon>search</mat-icon>
-    </button>
-    <!-- <button mat-button>
-    <mat-icon>account_circle</mat-icon>
-    {{ user.firstName }} {{ user.lastName }}
-  </button> -->
+    <!--<span class="spacer" *ngIf="isUser">Benvenuto utente {{user.username}}</span>
+    <span class="spacer" *ngIf="isAdmin">Benvenuto admin {{user.username}}</span> -->
+    <mat-toolbar-row class="nopleft"> 
+      <div class="col-3 nop">
+        <img src="assets/image/logo.png" class="logo">
+      </div>
+      <div class="col-2 offset-8">
+        <button mat-icon-button>
+          <mat-icon>search</mat-icon>
+        </button>
+        <button mat-icon-button (click)="logout()" matTooltip="Esci">
+          <mat-icon>logout</mat-icon>
+        </button>
+      </div>
+      
+    </mat-toolbar-row>
+    <mat-toolbar-row>
+      <button mat-button [matMenuTriggerFor]="aboveMenu">Uomo</button>
+      <mat-menu #aboveMenu="matMenu" yPosition="above">
+        <button mat-menu-item>T-shirt</button>
+        <button mat-menu-item>Trousers</button>
+      </mat-menu>
 
-    <button mat-icon-button (click)="logout()" matTooltip="Esci">
-    <mat-icon>logout</mat-icon>
-  </button>
+      <button mat-button [matMenuTriggerFor]="belowMenu">Donna</button>
+      <mat-menu #belowMenu="matMenu" yPosition="below">
+        <button mat-menu-item>T-shirt</button>
+        <button mat-menu-item>Trousers</button>
+      </mat-menu>
+
+      <button mat-button [matMenuTriggerFor]="beforeMenu">Bambini</button>
+      <mat-menu #beforeMenu="matMenu" xPosition="before">
+        <button mat-menu-item>T-shirt</button>
+        <button mat-menu-item>Trousers</button>
+      </mat-menu>
+    </mat-toolbar-row>
+    
+      
+        
+        <!-- <button mat-button>
+        <mat-icon>account_circle</mat-icon>
+        {{ user.firstName }} {{ user.lastName }}
+      </button> -->
+    
+        
+    
+    
 </mat-toolbar>
 
 
