--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,9 @@
     <span class="spacer" *ngIf="isAdmin">Benvenuto admin {{user.username}}</span> -->
     <mat-toolbar-row class="nopleft"> 
       <div class="col-3 nop">
-        <img src="assets/image/logo.png" class="logo">
+        <a href="/">
+          <img src="assets/image/logo.png" class="logo">
+        </a>
       </div>
       <div class="col-2 offset-8">
         <button mat-icon-button>
