--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,45 @@
 <div class="card mt-4">
-    <h4 class="card-header">Home</h4>
+    <div class="card-header">
+        <div class="example-container">
+            <mat-form-field hintLabel="Max 10 characters" appearance="fill">
+              <mat-label>Brand</mat-label>
+              <input matInput #input maxlength="10" placeholder="Ralph Lauren">
+              <!-- <mat-hint align="end">{{input.value?.length || 0}}/10</mat-hint> -->
+            </mat-form-field>
+            <mat-form-field appearance="fill">
+              <mat-label>Taglia</mat-label>
+              <mat-select multiple>
+                <mat-option>S</mat-option>
+                <mat-option>M</mat-option>
+                <mat-option>L</mat-option>
+              </mat-select>
+            </mat-form-field>
+            <mat-form-field appearance="fill">
+              <mat-label>Colore</mat-label>
+              <mat-select multiple>
+                <mat-option>Blu</mat-option>
+                <mat-option>Rosso</mat-option>
+                <mat-option>Arancione</mat-option>
+              </mat-select>
+            </mat-form-field>
+            <mat-form-field appearance="fill">
+              <mat-label>Tessuto</mat-label>
+              <mat-select multiple>
+                <mat-option>Cotone</mat-option>
+                <mat-option>Sintetico</mat-option>
+                <mat-option>Lana</mat-option>
+              </mat-select>
+            </mat-form-field>
+            <mat-form-field appearance="fill">
+              <mat-label>Prezzo</mat-label>
+              <mat-select multiple>
+                <mat-option>25</mat-option>
+                <mat-option>50</mat-option>
+                <mat-option>75</mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+    </div>
     <div class="card-body">
         <p>You're logged in with Angular 10 & JWT!!</p>
         <p>Your role is: <strong>{{user.role}}</strong>.</p>
