--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,50 +1,68 @@
 <div class="card mt-4">
     <div class="card-header">
         <div class="example-container row">
-            <mat-form-field hintLabel="Max 10 characters" class="col-2 nop" appearance="fill">
-              <mat-label>Brand</mat-label>
-              <input matInput #input maxlength="10" placeholder="Ralph Lauren">
-              <!-- <mat-hint align="end">{{input.value?.length || 0}}/10</mat-hint> -->
+            <mat-form-field appearance="fill" class="col-2 nop">
+                <mat-label>Brand</mat-label>
+                <input (keyup)="setBrandWithEvent($event)" [formControl]="myControl" [matAutocomplete]="auto" aria-label="Number" matInput placeholder="Insert brand" type="text">
+                <mat-autocomplete #auto="matAutocomplete" (optionSelected)="brand = $event.option.value">
+                    <mat-option *ngFor="let option of filteredOptions | async" [value]="option">{{option}}</mat-option>
+                </mat-autocomplete>
+                <!-- <mat-hint align="end">{{input.value?.length || 0}}/10</mat-hint> -->
             </mat-form-field>
             <mat-form-field class="col-3 nop" appearance="fill">
-              <mat-label>Taglia</mat-label>
-              <mat-select multiple (selectionChange)="changeTaglia($event.value)">
-                <mat-option value="S">S</mat-option>
-                <mat-option value="M">M</mat-option>
-                <mat-option value="L">L</mat-option>
-              </mat-select>
+                <mat-label>Taglia</mat-label>
+                <mat-select (selectionChange)="sizes = $event.value || []" multiple>
+                    <mat-option value="S">S</mat-option>
+                    <mat-option value="M">M</mat-option>
+                    <mat-option value="L">L</mat-option>
+                </mat-select>
             </mat-form-field>
             <mat-form-field class="col-3 nop" appearance="fill">
-              <mat-label>Colore</mat-label>
-              <mat-select multiple (selectionChange)="changeColore($event.value)">
-                <mat-option value="blu">Blu</mat-option>
-                <mat-option value="rosso">Rosso</mat-option>
-                <mat-option value="arancione">Arancione</mat-option>
-              </mat-select>
+                <mat-label>Colore</mat-label>
+                <mat-select (selectionChange)="colors = $event.value || []" multiple>
+                    <mat-option value="blu">Blu</mat-option>
+                    <mat-option value="red">Rosso</mat-option>
+                    <mat-option value="orange">Arancione</mat-option>
+                </mat-select>
             </mat-form-field>
-            <mat-form-field class="col-2 nop" appearance="fill">
-              <mat-label>Prezzo</mat-label>
-              <mat-select multiple (selectionChange)="changePrezzo($event.value)">
-                <mat-option value="25">25</mat-option>
-                <mat-option value="50">50</mat-option>
-                <mat-option value="75">75</mat-option>
-              </mat-select>
+            <mat-form-field class="col-1" apparance="fill">
+                <mat-label>Prezzo min:</mat-label>
+                <input (keyup)="setMinWithEvent($event)" matInput placeholder="0" type="number">
             </mat-form-field>
-            <div class="filter col-2">
-              <button mat-button (click)="filter()" matTooltip="Filtra">Filtra</button>
-            </div>
-          </div>
+            <mat-form-field class="col-1" apparance="fill">
+                <mat-label>Prezzo max:</mat-label>
+                <input (keyup)="setMaxWithEvent($event)" matInput placeholder="100" type="number">
+            </mat-form-field>
+        </div>
     </div>
     <div class="card-body">
-      <mat-grid-list cols="2" rowHeight="2:1">
-        <mat-grid-tile *ngFor="let article of clothesFiltered">
-          <div class="row">
-            <p>{{article.nome}}</p>
-            <img [src]="article.image" class="img-fluid item">
-            <p>Prezzo: {{article.prezzo}} €</p>
-          </div>
-        </mat-grid-tile>
-      </mat-grid-list>
-    
+        <div class="row">
+            <mat-form-field appearance="fill" class="col-2 nop">
+                <mat-label>Ordina per</mat-label>
+                <mat-select (selectionChange)="order = $event.value" [(value)]="order">
+                    <mat-option value="">Dal più recente</mat-option>
+                    <mat-option value="ASC">prezzo ascendente</mat-option>
+                    <mat-option value="DESC">prezzo discendente</mat-option>
+                </mat-select>
+            </mat-form-field>
+        </div>
+        <div class="content">
+            <mat-spinner *ngIf="clothes == null"></mat-spinner>
+            <div fxLayout="row wrap" fxLayoutGap="16px grid">
+                <div fxFlex="33%" fxFlex.xs="100%" fxFlex.sm="33%" *ngFor="let article of getFilteredClothes()">
+                    <mat-card class="mat-elevation-z4" (click)="openDialog(article)">
+                        <mat-card-header>
+                            <mat-card-title>
+                                {{article.nome}}
+                            </mat-card-title>
+                        </mat-card-header>
+                        <img mat-card-image [src]="article.image" class="img-fluid item">
+                        <mat-card-content>
+                            <p>Prezzo: {{article.prezzo}}</p>
+                        </mat-card-content>
+                    </mat-card>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
